<resources>
    <string name="app_name">东莞天气</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="forecast">预报</string>
    <string name="earlyWarn">预警</string>
    <string name="monitor">监测</string>
    <string name="mine">我的</string>
    <string name="interact">互动</string>

    <!-- 生活指数-->
    <string name="living_index">生活指数</string>
    <string name="air_index">空气指数</string>
    <string name="comfort_of_human_body">人体舒适度</string>
    <string name="umbrella_index">雨伞指数</string>
    <string name="exercise_index">晨练指数</string>
    <string name="outing_index">郊游指数</string>
    <string name="mildew_index">霉变指数</string>
    <string name="dry_index">晾晒指数</string>
    <string name="trafic_index">交通指数</string>
    <string name="sunrise_and_sunset">日出日落</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- 地图显示设置-->
    <string name="choose_map_show_content">选择地图显示内容</string>
    <string name="show_real_time_data">显示实时数据</string>
    <string name="real_time_weather">实况天气</string>
    <string name="real_time_temprature">实时温度</string>
    <string name="relative_humidity">相对湿度</string>
    <string name="real_time_rainfall">实时雨量</string>
    <string name="wind_power_and_wind_speed">风力风速</string>
    <string name="disaster_point">易灾点</string>
    <string name="refuge">避难所</string>
    <string name="real_photos">实景照片</string>

    <!-- 公用-->
    <string name="sure">确定</string>
    <string name="share">分享</string>
    <string name="close">关闭</string>
    <string name="open">展开</string>
    <string name="hot_city">热门城市</string>
    <string name="dongguan">东莞</string>
    <string name="open_all">展开全部</string>
    <string name="take_back">收回</string>
    <string name="delete">删除</string>

    <!--预报页面2-->
    <string name="title_48_hour_weather_forecast">精准天气预报</string>
    <string name="title_10_day_weather_forecast">10天天气预报</string>
    <string name="sun_rise_set">日出日落</string>
    <!-- 提示信息-->
    <string name="detail_info">详细信息</string>
    <string name="i_know">我知道了</string>
    <string name="go_there">到这里去</string>
    <string name="add_city">添加城市</string>

    <!--注册-->
    <string name="user_name">用户名</string>
    <string name="nick_name">昵称</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="i__agree_with_the_policy">我已阅读并同意用户协定</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
</resources>
