<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@id/fl_tab_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#77557799" />

    <RadioGroup
        android:id="@id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <RadioButton
            android:id="@id/rb_tab_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/home_tab_forecast_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/forecast"
            android:textColor="@drawable/home_tab_text_color_selector" />

        <RadioButton
            android:id="@id/rb_tab_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/home_tab_warn_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/earlyWarn"
            android:textColor="@drawable/home_tab_text_color_selector" />

        <RadioButton
            android:id="@id/rb_tab_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/home_tab_monitor_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/monitor"
            android:textColor="@drawable/home_tab_text_color_selector" />

        <RadioButton
            android:id="@id/rb_tab_interact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/home_tab_interact_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/interact"
            android:textColor="@drawable/home_tab_text_color_selector" />

        <RadioButton
            android:id="@id/rb_tab_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/home_tab_mine_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/mine"
            android:textColor="@drawable/home_tab_text_color_selector" />
    </RadioGroup>

</LinearLayout>